# day-trade-intellegence

./: .env.docker.example  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: test.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_reconciliation_runs.py
app/: __init__.py  bootstrap.py  main.py
app/api/: __init__.py  router.py
app/api/routes/: __init__.py  admin.py  auth.py  (+4 more)
app/core/: __init__.py  dependencies.py  errors.py  logging.py  settings.py
app/db/: __init__.py  models.py  session.py
app/domain/: __init__.py  auth.py  portfolio.py  reconciliation.py  trading.py
app/middleware/: __init__.py  request_context.py
app/repositories/: __init__.py  reconciliation_repository.py  trade_audit_repository.py  trading_repository.py  user_repository.py
app/security/: __init__.py  auth.py  tokens.py
app/services/: __init__.py  auth_service.py  execution_service.py  market_data_service.py  operational_service.py  orchestrator.py  portfolio_service.py  query_service.py  reconciliation_service.py  risk_manager.py  strategy_engine.py
app/ui/: __init__.py  router.py
app/workers/: __init__.py  celery_app.py  reconciliation_tasks.py
docs/: ARCHITECTURE_INTERVIEW_GUIDE.md  USER_GUIDE.md  architecture.md
scripts/: container-entrypoint.sh  start-docker.ps1  start-local.ps1  wait_for_services.py
tests/: conftest.py  test_auth_flow.py  test_market_data_service.py  test_operational_endpoints.py  test_orchestrator.py  test_query_service.py  test_reconciliation_service.py
(+3 files in other folders)
